fix(map): Minor updates to shift styles to tailwind provided where possible

--- a/src/Map/Map.scss
+++ b/src/Map/Map.scss
@@ -12,10 +12,10 @@
 
   #control-panel {
     pointer-events: all !important;
-    margin-bottom: 1.75rem;
-    margin-right: 1rem;
+    bottom: 1.75rem;
+    right: 1rem;
+    
     .button-group {
-      margin-top: 1rem;
       button {
         border-bottom: 1px solid #ccc;
         &:last-of-type {
